[package]
name = "circulum"
version = "0.1.0"
description = "Circulum - Decentralized Subscription Manager"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "circulum"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.17"

[dev-dependencies]
solana-program-test = "1.18.17"
solana-sdk = "1.18.17"
